Your-table refactoring 1) Add size customization for table

--- a/projects/your-style/src/lib/theming/your-default-sizes.scss
+++ b/projects/your-style/src/lib/theming/your-default-sizes.scss
@@ -173,14 +173,17 @@ $table_config: (
   s: (
     cell_padding: 8px,
     input_cell_padding: 6px,
+    font_size: 12px,
   ),
   m: (
     cell_padding: 12px,
     input_cell_padding: 8px,
+    font_size: 14px,
   ),
   l: (
     cell_padding: 14px,
     input_cell_padding: 10px,
+    font_size: 16px,
   ),
 );
 
